force-app/main/default/objects/Clari_Opp__c/Clari_Opp__c.object-meta.xml
<CustomObject>
    <label>Clari Opp</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Clari Opp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clari Opps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>