force-app/main/default/objects/Clari_Opp__c/fields/CQ_Probability__c.field-meta.xml
<CustomField>
    <fullName>CQ_Probability__c</fullName>
    <defaultValue>0.50</defaultValue>
    <label>CQ Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>