force-app/main/default/objects/Clari_Opp__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Clari Opps</relationshipLabel>
    <relationshipName>Clari_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>